--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,4 +32,14 @@ services:
     command: -config.file=/etc/promtail/config.yaml
     depends_on:
       - loki
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - grafana
 # Add more services below as needed
