Add Metabase service to Docker Compose and configure Nginx proxy

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,17 @@
 server {
     listen 80;
 
+    # Metabase (alphabetically first)
+    location /metabase/ {
+        proxy_pass http://metabase:3000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        rewrite ^/metabase/(.*)$ /$1 break;
+    }
+
+    # Grafana
     location /grafana/ {
         proxy_pass http://grafana:3000/;
         proxy_set_header Host $host;
