--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,27 @@ services:
     volumes:
       - ./loki/loki-config.yaml:/etc/loki/local-config.yaml:ro
 
+  metabase:
+    image: metabase/metabase:latest
+    container_name: metabase
+    ports:
+      - "3000:3000"
+    environment:
+      - MB_DB_FILE=/metabase.db/metabase.db
+    volumes:
+      - metabase-data:/metabase.db
+    restart: unless-stopped
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - grafana
+
   promtail:
     image: grafana/promtail:latest
     container_name: promtail
@@ -33,13 +54,5 @@ services:
     depends_on:
       - loki
 
-  nginx:
-    image: nginx:alpine
-    container_name: nginx
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - grafana
-# Add more services below as needed
+volumes:
+  metabase-data:
