--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     restart: unless-stopped
     command: -config.file=/etc/loki/local-config.yaml
     volumes:
+      # Mount a writable directory so the compactor can create /loki/index, /loki/boltdb-cache and /loki/chunks
+      - ./loki/data:/loki
       - ./loki/loki-config.yaml:/etc/loki/local-config.yaml:ro
 
   metabase:
