--- a/loki/loki-config.yaml
+++ b/loki/loki-config.yaml
@@ -23,6 +23,9 @@ storage_config:
     shared_store: filesystem
   filesystem:
     directory: /loki/chunks
+  compactor:
+    working_directory: /loki/boltdb-compactor
+    shared_store: filesystem
 limits_config:
   reject_old_samples: true
   reject_old_samples_max_age: 168h
