--- a/loki/loki-config.yaml
+++ b/loki/loki-config.yaml
@@ -23,12 +23,17 @@ storage_config:
     shared_store: filesystem
   filesystem:
     directory: /loki/chunks
-  compactor:
-    working_directory: /loki/boltdb-compactor
-    shared_store: filesystem
+compactor:
+  working_directory: /loki/boltdb-compactor
+  shared_store: filesystem
 limits_config:
   reject_old_samples: true
   reject_old_samples_max_age: 168h
 table_manager:
   retention_deletes_enabled: true
   retention_period: 168h
+
+ingester:
+  wal:
+    enabled: true
+    dir: /loki/wal
