--- a/nginx.conf
+++ b/nginx.conf
@@ -21,6 +21,16 @@ server {
         rewrite ^/grafana/(.*)$ /$1 break;
     }
 
+    # Promtail
+    location /promtail/ {
+        proxy_pass http://promtail:9080/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        rewrite ^/promtail/(.*)$ /$1 break;
+    }
+
     # Add more location blocks for other services as needed
 
     location / {
