Add rewrite rule for Promtail in Nginx configuration and update Promtail config to include Docker pipeline stages

--- a/promtail/promtail-config.yaml
+++ b/promtail/promtail-config.yaml
@@ -13,3 +13,5 @@ scrape_configs:
         labels:
           job: varlogs
           __path__: /var/log/*log
+    pipeline_stages:
+      - docker: {}
