--- a/promtail/promtail-config.yaml
+++ b/promtail/promtail-config.yaml
@@ -1,10 +1,14 @@
 server:
   http_listen_port: 9080
+  http_path_prefix: /promtail
   grpc_listen_port: 0
+
 positions:
   filename: /tmp/positions.yaml
+
 clients:
   - url: http://loki:3100/loki/api/v1/push
+
 scrape_configs:
   - job_name: system
     static_configs:
