--- a/promtail/promtail-config.yaml
+++ b/promtail/promtail-config.yaml
@@ -9,10 +9,11 @@ clients:
   - url: http://loki:3100/loki/api/v1/push
 
 scrape_configs:
-  - job_name: system
-    static_configs:
-      - targets:
-          - localhost
-        labels:
-          job: varlogs
-          __path__: /var/log/*log
+  - job_name: push
+    loki_push_api:
+      server:
+        http_listen_port: 9081
+        grpc_listen_port: 0
+      labels:
+        pushserver: "push"
+      url: http://loki:3100/loki/api/v1/push
