--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
 
-    # Metabase (alphabetically first)
+    # Metabase
     location /metabase/ {
         proxy_pass http://metabase:3000/;
         proxy_set_header Host $host;
@@ -21,7 +21,7 @@ server {
         rewrite ^/grafana/(.*)$ /$1 break;
     }
 
-    # Promtail
+    # Promtail - General (port 9080)
     location /promtail/ {
         proxy_pass http://promtail:9080/;
         proxy_set_header Host $host;
@@ -31,15 +31,14 @@ server {
         rewrite ^/promtail/(.*)$ /$1 break;
     }
 
+    # Promtail - Push API (port 9081)
     location /promtail/loki/api/v1/push {
-        proxy_pass http://loki:3100/loki/api/v1/push;
+        proxy_pass http://promtail:9081/loki/api/v1/push;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-
-    # Add more location blocks for other services as needed
 
     location / {
         return 404;
