Refactor Promtail configuration to streamline log scraping and add pipeline stages
- Removed the previous push server configuration and integrated it into a static job for scraping logs from /var/log.
- Updated job labels to reflect the new push job structure.
- Added a pipeline stage for Docker log processing.

--- a/promtail/promtail-config.yaml
+++ b/promtail/promtail-config.yaml
@@ -10,17 +10,11 @@ clients:
 
 scrape_configs:
   - job_name: push
-    loki_push_api:
-      server:
-        http_listen_port: 9081
-        grpc_listen_port: 0
-      labels:
-        pushserver: "push"
-  # Include existing file scraping config (based on logs showing /var/log/*log scraping)
-  - job_name: system
     static_configs:
       - targets:
           - localhost
         labels:
-          job: varlogs
+          job: push
           __path__: /var/log/*log
+    pipeline_stages:
+      - docker: {}
