--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - loki
 
   loki:
-    image: grafana/loki:2.9.7
+    image: grafana/loki:latest
     ports:
       - "3100:3100"
     container_name: loki
