--- a/loki/loki-config.yaml
+++ b/loki/loki-config.yaml
@@ -1,39 +1,34 @@
 auth_enabled: false
+
 server:
   http_listen_port: 3100
   grpc_listen_port: 9096
+
 common:
+  instance_addr: 127.0.0.1
+  path_prefix: /tmp/loki
+  storage:
+    filesystem:
+      chunks_directory: /tmp/loki/chunks
+      rules_directory: /tmp/loki/rules
   replication_factor: 1
   ring:
     kvstore:
       store: inmemory
+
+query_range:
+  results_cache:
+    cache:
+      embedded_cache:
+        enabled: true
+        max_size_mb: 100
+
 schema_config:
   configs:
     - from: 2020-10-24
-      store: boltdb-shipper
+      store: tsdb
       object_store: filesystem
-      schema: v11
+      schema: v12
       index:
         prefix: index_
         period: 24h
-storage_config:
-  boltdb_shipper:
-    active_index_directory: /loki/index
-    cache_location: /loki/boltdb-cache
-    shared_store: filesystem
-  filesystem:
-    directory: /loki/chunks
-compactor:
-  working_directory: /loki/boltdb-compactor
-  shared_store: filesystem
-limits_config:
-  reject_old_samples: true
-  reject_old_samples_max_age: 168h
-table_manager:
-  retention_deletes_enabled: true
-  retention_period: 168h
-
-ingester:
-  wal:
-    enabled: true
-    dir: /loki/wal
