--- a/promtail/promtail-config.yaml
+++ b/promtail/promtail-config.yaml
@@ -9,12 +9,10 @@ clients:
   - url: http://loki:3100/loki/api/v1/push
 
 scrape_configs:
-  - job_name: push
+  - job_name: system
     static_configs:
-      - targets:
-          - localhost
-        labels:
-          job: push
-          __path__: /var/log/*log
-    pipeline_stages:
-      - docker: {}
+    - targets:
+        - "localhost"
+      labels:
+        job: varlogs
+        __path__: /var/log/*log
