--- a/loki/loki-config.yaml
+++ b/loki/loki-config.yaml
@@ -16,6 +16,18 @@ common:
     kvstore:
       store: inmemory
 
+frontend:
+  max_outstanding_per_tenant: 2048
+
+pattern_ingester:
+  enabled: true
+
+limits_config:
+  max_global_streams_per_user: 0
+  ingestion_rate_mb: 50000
+  ingestion_burst_size_mb: 50000
+  volume_enabled: true
+
 query_range:
   results_cache:
     cache:
@@ -32,3 +44,9 @@ schema_config:
       index:
         prefix: index_
         period: 24h
+
+ruler:
+  alertmanager_url: http://localhost:9093
+
+analytics:
+  reporting_enabled: false
