--- a/nginx.conf
+++ b/nginx.conf
@@ -31,6 +31,15 @@ server {
         rewrite ^/promtail/(.*)$ /$1 break;
     }
 
+    # Promtail - Push API (port 9080)
+    location /promtail/loki/api/v1/push {
+        proxy_pass http://promtail:1515/loki/api/v1/push;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location / {
         return 404;
     }
