--- a/promtail/promtail-config.yaml
+++ b/promtail/promtail-config.yaml
@@ -1,3 +1,7 @@
+server:
+  http_listen_port: 9080
+  grpc_listen_port: 0
+
 positions:
   filename: /tmp/positions.yaml
 
@@ -8,7 +12,7 @@ scrape_configs:
   - job_name: docker
     loki_push_api:
       server:
-        http_listen_port: 9080
+        http_listen_port: 1515
         log_level: "debug"
       labels:
         job: "dockerjson"
