--- a/promtail/promtail-config.yaml
+++ b/promtail/promtail-config.yaml
@@ -17,7 +17,18 @@ scrape_configs:
       labels:
         job: "dockerjson"
     pipeline_stages:
-       - timestamp:
-           source: timestamp
-           format: RFC3339
+      - timestamp:
+          source: timestamp
+          format: RFC3339
 
+  - job_name: s3_logs
+    static_configs:
+      - targets:
+          - localhost
+        labels:
+          job: s3-logs
+          __path__: /mnt/s3-logs/**/*.log
+    pipeline_stages:
+      - timestamp:
+          source: timestamp
+          format: RFC3339
