Update Promtail configuration to change job label from "dockerjson" to "push_api" for improved clarity in log scraping context.

--- a/promtail/promtail-config.yaml
+++ b/promtail/promtail-config.yaml
@@ -15,7 +15,7 @@ scrape_configs:
         http_listen_port: 1515
         log_level: "debug"
       labels:
-        job: "dockerjson"
+        job: "push_api"
     pipeline_stages:
       - timestamp:
           source: timestamp
