--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - grafana
+      - promtail-cloudflare-adapter
 
   promtail:
     image: grafana/promtail:latest
@@ -61,6 +62,19 @@ services:
       - /var/log:/var/log:ro
       - ./promtail/promtail-config.yaml:/etc/promtail/config.yaml:ro
     command: -config.file=/etc/promtail/config.yaml -config.expand-env=true
+    depends_on:
+      - loki
+
+  promtail-cloudflare-adapter:
+    build:
+      context: ./promtail-cloudflare-adapter
+      dockerfile: Dockerfile
+    container_name: promtail-cloudflare-adapter
+    restart: unless-stopped
+    ports:
+      - "3001:3000"
+    environment:
+      - LOKI_URL=http://loki:3100/loki/api/v1/push
     depends_on:
       - loki
 
