--- a/nginx.conf
+++ b/nginx.conf
@@ -40,6 +40,15 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Promtail - Cloudflare Adapter
+    location /promtail/cloudflare/api/v1/push {
+        proxy_pass http://promtail-cloudflare-adapter:3000/logpush;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location / {
         return 404;
     }
