Refactor Nginx configuration for Promtail
- Updated the Nginx configuration to clarify routing for the Promtail Cloudflare Adapter and the general Promtail service.
- Adjusted location blocks to ensure proper request handling and proxying to the respective services.
- Removed redundant rewrite rules to streamline the configuration.

--- a/nginx.conf
+++ b/nginx.conf
@@ -21,14 +21,13 @@ server {
         rewrite ^/grafana/(.*)$ /$1 break;
     }
 
-    # Promtail - General (port 9080)
-    location /promtail/ {
-        proxy_pass http://promtail:9080/;
+    # Promtail - Cloudflare Adapter (most specific first)
+    location /promtail/cloudflare/api/v1/push {
+        proxy_pass http://promtail-cloudflare-adapter:3000/logpush;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        rewrite ^/promtail/(.*)$ /$1 break;
     }
 
     # Promtail - Push API (port 9080)
@@ -40,13 +39,14 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Promtail - Cloudflare Adapter
-    location /promtail/cloudflare/api/v1/push {
-        proxy_pass http://promtail-cloudflare-adapter:3000/logpush;
+    # Promtail - General (port 9080)
+    location /promtail/ {
+        proxy_pass http://promtail:9080/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        rewrite ^/promtail/(.*)$ /$1 break;
     }
 
     location / {
