--- a/promtail-cloudflare-adapter/package.json
+++ b/promtail-cloudflare-adapter/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "body-parser": "^1.20.2",
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "pako": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
