--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,14 +53,10 @@ services:
     restart: unless-stopped
     ports:
       - "9080:9080"
-    environment:
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_REGION=${AWS_REGION}
     volumes:
       - /var/log:/var/log:ro
       - ./promtail/promtail-config.yaml:/etc/promtail/config.yaml:ro
-    command: -config.file=/etc/promtail/config.yaml -config.expand-env=true
+    command: -config.file=/etc/promtail/config.yaml
     depends_on:
       - loki
 
