Add Prometheus service and configuration
- Introduced a new Prometheus service in the Docker Compose file, including necessary ports and volume mappings.
- Added a Prometheus configuration file with scrape settings for monitoring Prometheus, Grafana, Loki, and Promtail.
- Updated Nginx configuration to route requests to the Prometheus service, enhancing monitoring capabilities.

--- a/nginx.conf
+++ b/nginx.conf
@@ -21,6 +21,15 @@ server {
         rewrite ^/grafana/(.*)$ /$1 break;
     }
 
+    # Prometheus
+    location /prometheus/ {
+        proxy_pass http://prometheus:9090/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        rewrite ^/prometheus/(.*)$ /$1 break;
+    }
 
     # Promtail - Push API (port 9080)
     location /promtail/loki/api/v1/push {
