--- a/nginx.conf
+++ b/nginx.conf
@@ -21,6 +21,26 @@ server {
         rewrite ^/grafana/(.*)$ /$1 break;
     }
 
+    # Consul
+    location /consul/ {
+        proxy_pass http://consul:8500/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        rewrite ^/consul/(.*)$ /$1 break;
+    }
+
+    # Blackbox Exporter
+    location /blackbox/ {
+        proxy_pass http://blackbox-exporter:9115/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        rewrite ^/blackbox/(.*)$ /$1 break;
+    }
+
     # Prometheus
     location /prometheus/ {
         proxy_pass http://prometheus:9090/;
