--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,22 @@
+# =========================================
+# Nginx Reverse Proxy Configuration
+# =========================================
+#
+# This configuration provides a unified entry point for all
+# observability stack services through path-based routing:
+#
+# Service Access URLs:
+#   /grafana/     -> Grafana dashboards (port 3000)
+#   /prometheus/  -> Prometheus UI (port 9090) 
+#   /consul/      -> Consul UI (port 8500)
+#   /metabase/    -> Metabase analytics (port 3030->3000)
+#   /blackbox/    -> Blackbox exporter (port 9115)
+#   /promtail/    -> Promtail endpoints (port 9080)
+#
+# All services are accessible via http://your-server/<service>/
+#
+# =========================================
+
 server {
     listen 80;
 
