--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 # =========================================
 # Observability Stack - Docker Compose
 # =========================================
@@ -33,7 +31,7 @@ version: '3.8'
 
 services:
   blackbox-exporter:
-    image: prom/blackbox-exporter:latest
+    image: prom/blackbox-exporter:v0.24.0
     container_name: blackbox-exporter
     restart: unless-stopped
     ports:
@@ -44,7 +42,7 @@ services:
       - '--config.file=/etc/blackbox_exporter/config.yml'
 
   consul:
-    image: consul:latest
+    image: hashicorp/consul:1.17
     container_name: consul
     restart: unless-stopped
     ports:
@@ -62,7 +60,7 @@ services:
       - '-config-file=/consul/config/consul.hcl'
 
   grafana:
-    image: grafana/grafana-oss:latest
+    image: grafana/grafana-oss:10.2.3
     ports:
       - "3000:3000"
     container_name: grafana
@@ -74,7 +72,7 @@ services:
       - loki
 
   loki:
-    image: grafana/loki:latest
+    image: grafana/loki:2.9.4
     ports:
       - "3100:3100"
     container_name: loki
@@ -85,7 +83,7 @@ services:
       - ./loki/loki-config.yaml:/etc/loki/local-config.yaml:ro
 
   metabase:
-    image: metabase/metabase:latest
+    image: metabase/metabase:v0.48.3
     container_name: metabase
     ports:
       - "3030:3000"
@@ -98,7 +96,7 @@ services:
     restart: unless-stopped
 
   nginx:
-    image: nginx:alpine
+    image: nginx:1.25-alpine
     container_name: nginx
     ports:
       - "80:80"
@@ -110,7 +108,7 @@ services:
       - blackbox-exporter
 
   promtail:
-    image: grafana/promtail:latest
+    image: grafana/promtail:2.9.4
     container_name: promtail
     restart: unless-stopped
     ports:
@@ -123,7 +121,7 @@ services:
       - loki
 
   prometheus:
-    image: prom/prometheus:latest
+    image: prom/prometheus:v2.48.1
     container_name: prometheus
     restart: unless-stopped
     ports:
