--- a/nginx.conf
+++ b/nginx.conf
@@ -40,14 +40,14 @@ server {
         rewrite ^/grafana/(.*)$ /$1 break;
     }
 
-    # Consul
+    # Consul UI
     location /consul/ {
-        proxy_pass http://consul:8500/;
+        proxy_pass http://consul:8500/ui/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        rewrite ^/consul/(.*)$ /$1 break;
+        proxy_redirect off;
     }
 
     # Blackbox Exporter
