--- a/nginx.conf
+++ b/nginx.conf
@@ -40,14 +40,17 @@ server {
         rewrite ^/grafana/(.*)$ /$1 break;
     }
 
-    # Consul UI
+    # Consul - redirect to UI
+    location = /consul {
+        return 301 /consul/ui/;
+    }
+    
     location /consul/ {
-        proxy_pass http://consul:8500/ui/;
+        proxy_pass http://consul:8500/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect off;
     }
 
     # Blackbox Exporter
