--- a/nginx.conf
+++ b/nginx.conf
@@ -51,6 +51,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        rewrite ^/consul/(.*)$ /$1 break;
     }
 
     # Blackbox Exporter
