--- a/nginx.conf
+++ b/nginx.conf
@@ -40,18 +40,12 @@ server {
         rewrite ^/grafana/(.*)$ /$1 break;
     }
 
-    # Consul - redirect to UI
-    location = /consul {
-        return 301 /consul/ui/;
-    }
-    
     location /consul/ {
-        proxy_pass http://consul:8500/;
+        proxy_pass http://consul:8500/ui/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        rewrite ^/consul/(.*)$ /$1 break;
     }
 
     # Blackbox Exporter
