--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@
 
 services:
   blackbox-exporter:
-    image: prom/blackbox-exporter:v0.24.0
+    image: prom/blackbox-exporter:latest
     container_name: blackbox-exporter
     restart: unless-stopped
     ports:
@@ -42,7 +42,7 @@ services:
       - '--config.file=/etc/blackbox_exporter/config.yml'
 
   consul:
-    image: hashicorp/consul:1.17
+    image: hashicorp/consul:latest
     container_name: consul
     restart: unless-stopped
     ports:
@@ -60,7 +60,7 @@ services:
       - '-config-file=/consul/config/consul.hcl'
 
   grafana:
-    image: grafana/grafana-oss:10.2.3
+    image: grafana/grafana-oss:latest
     ports:
       - "3000:3000"
     container_name: grafana
@@ -72,7 +72,7 @@ services:
       - loki
 
   loki:
-    image: grafana/loki:2.9.4
+    image: grafana/loki:latest
     ports:
       - "3100:3100"
     container_name: loki
@@ -83,7 +83,7 @@ services:
       - ./loki/loki-config.yaml:/etc/loki/local-config.yaml:ro
 
   metabase:
-    image: metabase/metabase:v0.48.3
+    image: metabase/metabase:latest
     container_name: metabase
     ports:
       - "3030:3000"
@@ -96,7 +96,7 @@ services:
     restart: unless-stopped
 
   nginx:
-    image: nginx:1.25-alpine
+    image: nginx:latest
     container_name: nginx
     ports:
       - "80:80"
@@ -108,7 +108,7 @@ services:
       - blackbox-exporter
 
   promtail:
-    image: grafana/promtail:2.9.4
+    image: grafana/promtail:latest
     container_name: promtail
     restart: unless-stopped
     ports:
@@ -121,7 +121,7 @@ services:
       - loki
 
   prometheus:
-    image: prom/prometheus:v2.48.1
+    image: prom/prometheus:latest
     container_name: prometheus
     restart: unless-stopped
     ports:
