Add pattern ingester configuration to Loki
- Enabled the pattern ingester in the Loki configuration to enhance log processing capabilities.
- This addition allows for improved handling of log patterns, contributing to better observability and analysis.
- Ensures that the Loki service is equipped with the necessary features for efficient log management.

--- a/loki/loki-config.yaml
+++ b/loki/loki-config.yaml
@@ -19,6 +19,9 @@ common:
 limits_config:
   volume_enabled: true
 
+pattern_ingester:
+  enabled: true
+
 query_range:
   results_cache:
     cache:
