--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,7 @@
 #   /metabase/    -> Metabase analytics (port 3030->3000)
 #   /blackbox/    -> Blackbox exporter (port 9115)
 #   /promtail/    -> Promtail endpoints (port 9080)
+#   /sentry/      -> Sentry error tracking (port 9000)
 #
 # All services are accessible via http://your-server/<service>/
 #
@@ -85,6 +86,16 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         rewrite ^/promtail/(.*)$ /$1 break;
+    }
+
+    # Sentry (port 9000)
+    location /sentry/ {
+        proxy_pass http://sentry-web:9000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        rewrite ^/sentry/(.*)$ /$1 break;
     }
 
     location / {
