Update Docker Compose to add Grafana data volume
- Added a named volume for Grafana data persistence to ensure data is retained across container restarts.
- Updated the Docker Compose file to include the new volume definition, enhancing the overall configuration for Grafana services.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,6 +74,8 @@ services:
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_SERVER_ROOT_URL=http://localhost/grafana
+    volumes:
+      - grafana-data:/var/lib/grafana
     depends_on:
       - loki
 
@@ -262,6 +264,7 @@ services:
 
 volumes:
   consul-data:
+  grafana-data:
   loki-data:
   metabase-data:
   prometheus-data:
